--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^3.2.0",
+        "vue": "^3.2.36"
     }
 }
