--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,20 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "illuminate/support": "~7.0|~8.0|~9.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-permission": "^5.7"
+        "spatie/laravel-permission": "^5.7",
+        "asantibanez/livewire-calendar": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -26,9 +31,15 @@
             "App\\": "app/",
             "Src\\": "src/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Asantibanez\\LivewireCalendar\\": "vendor/asantibanez/livewire-calendar/src/"
+
         }
     },
+    "repositories": [{ "type": "package", "canonical": false, "package": { "version": "master", "name": "asantibanez/livewire-calendar", "source": { "url": "https://github.com/Butochnikov/livewire-calendar.git", "type": "git", "reference": "master" } } }]
+
+,
+
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
