--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "illuminate/support": "~7.0|~8.0|~9.0",
+        "asantibanez/livewire-calendar": "dev-master",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/support": "~7.0|~8.0|~9.0",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-permission": "^5.7",
-        "asantibanez/livewire-calendar": "dev-master"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
