--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-permission": "^5.7"
+        "spatie/laravel-permission": "^5.7",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
